tests/ui/const-generics/adt_const_params/const_param_ty_impl_no_structural_eq.stderr
error[E0277]: the trait bound `CantParam: Eq` is not satisfied
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:10:37
   |
LL | impl std::marker::ConstParamTy_ for CantParam {}
   |                                     ^^^^^^^^^ the trait `Eq` is not implemented for `CantParam`
   |
note: required by a bound in `ConstParamTy_`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
help: consider annotating `CantParam` with `#[derive(Eq)]`
   |
LL + #[derive(Eq)]
LL | struct CantParam(ImplementsConstParamTy);
   |

error[E0277]: the type `CantParam` does not `#[derive(PartialEq)]`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:10:37
   |
LL | impl std::marker::ConstParamTy_ for CantParam {}
   |                                     ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StructuralPartialEq` is not implemented for `CantParam`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:8:1
   |
LL | struct CantParam(ImplementsConstParamTy);
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `ConstParamTy_`
  --> $SRC_DIR/core/src/marker.rs:LL:COL

error[E0277]: the trait bound `CantParamDerive: Eq` is not satisfied
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:14:10
   |
LL | #[derive(std::marker::ConstParamTy)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Eq` is not implemented for `CantParamDerive`
   |
note: required by a bound in `ConstParamTy_`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
help: consider annotating `CantParamDerive` with `#[derive(Eq)]`
   |
LL + #[derive(Eq)]
LL | struct CantParamDerive(ImplementsConstParamTy);
   |

error[E0277]: the type `CantParamDerive` does not `#[derive(PartialEq)]`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:14:10
   |
LL | #[derive(std::marker::ConstParamTy)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StructuralPartialEq` is not implemented for `CantParamDerive`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:17:1
   |
LL | struct CantParamDerive(ImplementsConstParamTy);
   | ^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ConstParamTy_`
  --> $SRC_DIR/core/src/marker.rs:LL:COL

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
